force-app/main/default/objects/SalesforceSurvey__x/SalesforceSurvey__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceSurvey</externalName>
    <label>Survey Response Salesforce</label>
    <pluralLabel>Survey Response Salesforce</pluralLabel>
</CustomObject>