force-app/main/default/objects/SalesforceSurvey__x/fields/Response12C__c.field-meta.xml
<CustomField>
    <fullName>Response12C__c</fullName>
    <description>Response12C</description>
    <externalDeveloperName>Response12C</externalDeveloperName>
    <label>Response12C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>