force-app/main/default/objects/SalesforceSurvey__x/fields/Response14C__c.field-meta.xml
<CustomField>
    <fullName>Response14C__c</fullName>
    <description>Response14C</description>
    <externalDeveloperName>Response14C</externalDeveloperName>
    <label>Response14C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>