force-app/main/default/objects/SalesforceSurvey__x/fields/Response16C__c.field-meta.xml
<CustomField>
    <fullName>Response16C__c</fullName>
    <description>Response16C</description>
    <externalDeveloperName>Response16C</externalDeveloperName>
    <label>Response16C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>