force-app/main/default/objects/SalesforceSurvey__x/fields/Sur_Question11C__c.field-meta.xml
<CustomField>
    <fullName>Sur_Question11C__c</fullName>
    <description>Sur_Question11C</description>
    <externalDeveloperName>Sur_Question11C</externalDeveloperName>
    <label>Sur_Question11C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>