force-app/main/default/objects/SalesforceSurvey__x/fields/Sur_Question13C__c.field-meta.xml
<CustomField>
    <fullName>Sur_Question13C__c</fullName>
    <description>Sur_Question13C</description>
    <externalDeveloperName>Sur_Question13C</externalDeveloperName>
    <label>Quesito 13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>