force-app/main/default/objects/SalesforceSurvey__x/fields/Sur_Question14C__c.field-meta.xml
<CustomField>
    <fullName>Sur_Question14C__c</fullName>
    <description>Sur_Question14C</description>
    <externalDeveloperName>Sur_Question14C</externalDeveloperName>
    <label>Sur_Question14C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>