force-app/main/default/objects/SalesforceSurvey__x/fields/SurveyCRMC__c.field-meta.xml
<CustomField>
    <fullName>SurveyCRMC__c</fullName>
    <description>SurveyCRMC</description>
    <externalDeveloperName>SurveyCRMC</externalDeveloperName>
    <label>SurveyCRMC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>